@@ -18,7 +18,7 @@
   <parent>
     <artifactId>immutables</artifactId>
     <groupId>org.immutables</groupId>
-    <version>2.9.2-SNAPSHOT</version>
+    <version>2.9.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>mongo</artifactId>
@@ -141,6 +141,7 @@
             <configuration>
               <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
               <argLine>--add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+              <argLine>--add-opens=java.base/java.util.regex=ALL-UNNAMED</argLine>
               <argLine>--add-opens=java.base/java.time=ALL-UNNAMED</argLine>
             </configuration>
           </plugin>
